# parallel-concurrent-haskell

./: .gitignore  README.md  cabal.project  flake.nix
nix/: project.nix  shell.nix
src/c010203/: c010203.cabal  notes.org
src/c010203/app/: Main.hs
src/c010203/src/: Rpar.hs  Rpar0.hs  Sudoku.hs  Sudoku1.hs  Sudoku2.hs  Sudoku3.hs  ThunkDemo.hs
src/c07/: c07.cabal
src/c07/app/: Main.hs
src/c07/src/C07/: Channel.hs  Logger.hs  Mvar.hs  PhoneBook.hs
src/c08/: CHANGELOG.md  c08.cabal
src/c08/app/: Main.hs
src/c08/src/C08/: Async.hs  Async2.hs
src/c09/: c09.cabal
src/c09/app/: Main.hs
src/c09/src/C09/: AsyncException.hs
src/c10/: c10.cabal
src/c10/app/: Main.hs
src/c10/src/C10/: Display.hs
src/c12/: c12.cabal
src/c12/app/: Main.hs
src/c12/src/C12/: ChatClient.hs  ChatServer.hs  STMServer.hs  Server.hs
src/local-utils/: local-utils.cabal
src/local-utils/src/: GetURL.hs  NetworkUtils.hs  Timeit.hs
